--- a/.github/workflows/supply_chain_sentinel.yml
+++ b/.github/workflows/supply_chain_sentinel.yml
@@ -18,10 +18,10 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: Login to ECR
+    - name: Login to Amazon ECR
       run: |
-        aws ecr get-login-password \
-        | docker login --username AWS --password-stdin $ECR_URL
+        aws ecr get-login-password --region us-east-1 \
+        | docker login --username AWS --password-stdin  $ECR_URL
 
     - name: Build & Push Docker
       run: |
