--- a/.github/workflows/supply_chain_sentinel.yml
+++ b/.github/workflows/supply_chain_sentinel.yml
@@ -19,9 +19,11 @@ jobs:
         aws-region: us-east-1
 
     - name: Login to Amazon ECR
+      env:
+        ECR_URL: ${{ secrets.ECR_URL }}
       run: |
         aws ecr get-login-password --region us-east-1 \
-        | docker login --username AWS --password-stdin  $ECR_URL
+        | docker login --username AWS --password-stdin $ECR_URL
 
     - name: Build & Push Docker
       run: |
