--- a/.github/workflows/supply_chain_sentinel.yml
+++ b/.github/workflows/supply_chain_sentinel.yml
@@ -26,6 +26,7 @@ jobs:
         | docker login --username AWS --password-stdin $ECR_URL
 
     - name: Build & Push Docker
+      working-directory: ./Backend
       env:
           ECR_URL: ${{ secrets.ECR_URL }}
       run: |
@@ -38,5 +39,6 @@ jobs:
       with:
         command: up
         stack-name: dev
+        work-dir: ./infra
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
