--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -23,36 +23,35 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-# Copy requirements from your working venv (exact copy minus Windows packages)
-COPY crew_requirements_exact.txt .
-
-# Install Python dependencies (exact versions from your working venv)
+# First install essential packages that we know work
 RUN pip install --upgrade pip setuptools wheel \
-    && pip install --no-cache-dir -r crew_requirements_exact.txt \
-    && pip install --no-cache-dir rapidfuzz==3.14.3 \
-    && pip cache purge \
-    && find /usr/local/lib/python3.11/site-packages -name "*.pyc" -delete \
-    && find /usr/local/lib/python3.11/site-packages -name "__pycache__" -type d -exec rm -rf {} + 2>/dev/null || true
+    && pip install --no-cache-dir \
+        fastapi==0.123.10 \
+        uvicorn==0.40.0 \
+        pydantic==2.11.10 \
+        python-dotenv==1.1.1 \
+        requests==2.32.5
+
+# Copy and install the minimal requirements for now
+COPY crew_requirements_minimal.txt .
+RUN pip install --no-cache-dir -r crew_requirements_minimal.txt || echo "Some packages failed to install, continuing..."
 
 # Copy application code
 COPY app/ ./app/
 
-# Create a non-root user and clean up build dependencies
+# Create a non-root user
 RUN useradd --create-home --shell /bin/bash app \
     && chown -R app:app /app \
-    && apt-get purge -y gcc g++ build-essential \
-    && apt-get autoremove -y \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm crew_requirements_exact.txt
+    && rm -f crew_requirements_minimal.txt
 
 USER app
 
 # Expose port
 EXPOSE 8000
 
-# Health check using requests (since it's in your venv)
+# Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:8000/', timeout=5)" || exit 1
 
-# Run the application (same as your venv setup)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use full path to uvicorn to ensure it's found
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
